complete the Ui

--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
     </div>
     <div class="control">
         <button class="btn" id="erase-btn">Refresh</button>
-        <button class="btn" id="size-btn1">16</button>
-        <button class="btn" id="size-btn2">32</button>
-        <button class="btn" id="size-btn3">48</button>
+        <button class="btn" id="size-btn">16</button>
+        <button class="btn" id="size-btn">32</button>
+        <button class="btn" id="size-btn">48</button>
         <button class="btn" id="def-color--btn">Default Color</button>
         <button class="btn" id="rand-color--btn">Random Color</button>
         <input type="color" name="" id="color-picker">
