--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Etch A Sketch</title>
-    <link rel="stylesheet" href="/style.css">
-    <link rel="stylesheet" href="/star.css">
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="star.css">
     <script type="text/javascript" src="http://code.jquery.com/jquery-latest.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -31,6 +31,6 @@
         <button class="btn" id="rand-color--btn">Random Color</button>
         <input type="color" name="" id="color-picker">
     </div>
-    <script type="text/javascript" src="/script.js"></script> 
+    <script type="text/javascript" src="script.js"></script> 
 </body>
 </html>
